rename and move xboxdrv files

--- a/xboxdrv/sc-minecraft.ini
+++ b/xboxdrv/sc-minecraft.ini
@@ -1,22 +1,23 @@
 [xboxdrv]
 evdev=/dev/input/by-id/usb-Valve_Software_Wired_Controller-if02-event-joystick
 silent=true
+trigger-as-button=true
 
 [evdev-absmap]
 ABS_X=x1
 ABS_Y=y1
 ABS_RX=x2
 ABS_RY=y2
-ABS_HAT2X=lt
-ABS_HAT2Y=rt
+ABS_HAT2X=rt
+ABS_HAT2Y=lt
 ABS_HAT0X=dpad_x
 ABS_HAT0Y=dpad_y
 
 [evdev-keymap]
 BTN_SOUTH=a
 BTN_EAST=b
-BTN_WEST=x
-BTN_NORTH=y
+BTN_WEST=y
+BTN_NORTH=x
 BTN_TL=lb
 BTN_TR=rb
 BTN_START=start
@@ -32,15 +33,23 @@ BTN_GEAR_UP=tr
 -y2=y2
 
 [ui-buttonmap]
-a=KEY_E
-b=KEY_Q
-x=KEY_F
-y=KEY_R
-lb=KEY_Z
-rb=BTN_RIGHT
+A=KEY_A
+B=KEY_B
+X=KEY_X
+Y=KEY_Y
+LB=KEY_L
+RB=KEY_R
+BACK=BTN_BACK
+START=BTN_FORWARD
+LT=BTN_LEFT
+RT=BTN_RIGHT
+TL=BTN_SIDE
+TR=BTN_EXTRA
 
 [ui-axismap]
-x1=KEY_A:KEY_D
-y1=KEY_W:KEY_S
-lt=KEY_SPACE
-rt=BTN_LEFT
+X1=KEY_S:KEY_F
+Y1=KEY_E:KEY_D
+X2=REL_X
+Y2=REL_Y
+DPAD_X=REL_HWHEEL
+DPAD_Y=REL_WHEEL
