fiddling with xboxdrv config files

--- a/xboxdrv/sc-wireless-leftpad.ini
+++ b/xboxdrv/sc-wireless-leftpad.ini
@@ -1,16 +1,17 @@
+;Map wireless Steam Controller to standard Xbox/360 controller
 [xboxdrv]
 evdev=/dev/input/by-id/usb-Valve_Software_Steam_Controller-if01-event-joystick
 silent=true
 
 [evdev-absmap]
-ABS_X=x1
-ABS_Y=y1
+ABS_X=dpad_x
+ABS_Y=dpad_y
 ABS_RX=x2
 ABS_RY=y2
 ABS_HAT2X=rt
 ABS_HAT2Y=lt
-ABS_HAT0X=dpad_x
-ABS_HAT0Y=dpad_y
+ABS_HAT0X=x1
+ABS_HAT0Y=y1
 
 [evdev-keymap]
 #BTN_THUMB=tl
@@ -26,10 +27,10 @@ BTN_TR=rb
 BTN_SELECT=back
 BTN_START=start
 BTN_MODE=guide
-#BTN_THUMBL=tl
-#BTN_THUMBR=tr
-BTN_GEAR_DOWN=tl
-BTN_GEAR_UP=tr
+BTN_THUMBL=tl
+BTN_THUMBR=tr
+BTN_GEAR_DOWN=guide
+BTN_GEAR_UP=guide
 #BTN_DPAD_UP=du
 #BTN_DPAD_DOWN=dd
 #BTN_DPAD_LEFT=dl
@@ -38,3 +39,15 @@ BTN_GEAR_UP=tr
 [axismap]
 -y1=y1
 -y2=y2
+
+[ui-buttonmap]
+guide+a=KEY_KP2
+guide+x=KEY_KP4
+guide+b=KEY_KP6
+guide+y=KEY_KP8
+
+[calibration]
+x1=-25000:0:25000
+y1=-25000:0:25000
+x2=-25000:0:25000
+y2=-25000:0:25000
