--- a/xboxdrv/scw-turok.ini
+++ b/xboxdrv/scw-turok.ini
@@ -21,20 +21,23 @@ BTN_NORTH=x
 BTN_WEST=y
 BTN_TL=lb
 BTN_TR=rb
-#BTN_TL2=lt
-#BTN_TR2=rt
+BTN_TL2=lt
+BTN_TR2=rt
 BTN_SELECT=back
 BTN_START=start
 BTN_MODE=guide
-#BTN_THUMBL=tl
-#BTN_THUMBR=tr
+BTN_THUMBL=tl
+BTN_THUMBR=tr
 BTN_GEAR_DOWN=tl
 BTN_GEAR_UP=tr
-#BTN_DPAD_UP=du
-#BTN_DPAD_DOWN=dd
-#BTN_DPAD_LEFT=dl
-#BTN_DPAD_RIGHT=dr
+BTN_DPAD_UP=du
+BTN_DPAD_DOWN=dd
+BTN_DPAD_LEFT=dl
+BTN_DPAD_RIGHT=dr
 
 [axismap]
 -y1=y1
 -y2=y2
+
+[ui-buttonmap]
+lt=KEY_SPACE
