--- a/xboxdrv/ffxiv.ini
+++ b/xboxdrv/ffxiv.ini
@@ -1,7 +1,9 @@
 [ui-axismap]
-x2^response:-32768:-32768:-32678:0:0:0:32768:32768:32768
-y2^response:-32768:-32768:-32678:0:0:0:32768:32768:32768
+#x1^calibration:-24000:0:24000
+#y1^calibration:-24000:0:24000
+#x2^response:-32768:-32768:-32678:0:0:0:32768:32768:32768
+#y2^response:-32768:-32768:-32678:0:0:0:32768:32768:32768
 
 [modifier]
 square-axis=x1:y1
-four-way-restrictor=x2:y2
+#four-way-restrictor=x2:y2
