--- a/xboxdrv/scw-xbox.ini
+++ b/xboxdrv/scw-xbox.ini
@@ -1,3 +1,4 @@
+;Map wireless Steam Controller to standard Xbox/360 controller
 [xboxdrv]
 evdev=/dev/input/by-id/usb-Valve_Software_Steam_Controller-if01-event-joystick
 silent=true
@@ -26,10 +27,10 @@ BTN_TR=rb
 BTN_SELECT=back
 BTN_START=start
 BTN_MODE=guide
-#BTN_THUMBL=tl
-#BTN_THUMBR=tr
-BTN_GEAR_DOWN=tl
-BTN_GEAR_UP=tr
+BTN_THUMBL=tl
+BTN_THUMBR=tr
+BTN_GEAR_DOWN=lt
+BTN_GEAR_UP=rt
 #BTN_DPAD_UP=du
 #BTN_DPAD_DOWN=dd
 #BTN_DPAD_LEFT=dl
@@ -38,3 +39,9 @@ BTN_GEAR_UP=tr
 [axismap]
 -y1=y1
 -y2=y2
+
+[calibration]
+x1=-30000:0:30000
+y1=-30000:0:30000
+x2=-30000:0:30000
+y2=-30000:0:30000
